# langcodes

./: .gitignore  .mailmap  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  example.py  luminoso.md  pyproject.toml  pytest.ini  setup.cfg  setup.py  tox.ini  typing-lament.md
.github/workflows/: cd.yml  ci.yml  publish.yaml  test-report.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/source/: langcodes.rst  modules.rst
langcodes/: __init__.py  build_data.py  cldr.py  data_dicts.py  db.py  distance.py  language_distance.py  language_lists.py  load_subtags.py  macrolanguages.py  names.py  registry_parser.py  semantics.py  tag_parser.py  util.py  wiktionary_language_list.py
langcodes/data/: aliases.csv  bibliographic_codes.csv  extra_language_names.csv  language-subtag-registry.txt  subtags.db  wiktionary-languages.txt
langcodes/data/cldr/: README
langcodes/data/cldr/supplemental/: aliases.json  languageMatching.json  likelySubtags.json  parentLocales.json  territoryContainment.json  territoryInfo.json
langcodes/data/trie/: language_to_name.marisa  name_to_language.marisa  name_to_region.marisa  region_to_name.marisa  script_to_name.marisa  territory_to_name.marisa  variant_to_name.marisa
langcodes/data/trie/af/: name_to_language.marisa  name_to_region.marisa  name_to_script.marisa  name_to_territory.marisa
langcodes/data/trie/agq/: name_to_language.marisa  name_to_region.marisa
langcodes/data/trie/ak/: name_to_language.marisa  name_to_region.marisa
langcodes/data/trie/am/: name_to_language.marisa  name_to_region.marisa  name_to_script.marisa  name_to_territory.marisa
langcodes/data/trie/ar/: name_to_language.marisa  name_to_region.marisa  name_to_script.marisa  name_to_territory.marisa
langcodes/data/trie/as/: name_to_language.marisa  name_to_region.marisa  name_to_script.marisa
langcodes/data/trie/asa/: name_to_language.marisa  (+1 more)
langcodes/data/wiktionary/: codes-en.csv
langcodes/tests/: test_wikt_english.py  test_wikt_languages.py
(+3138 files in other folders)
