[tool.poetry]
name = "langcodes"
version = "3.3.0"
description = "Tools for labeling human languages with IETF language tags"
authors = ["Elia Robyn Speer <rspeer@arborelia.net>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rspeer/langcodes"
exclude = ["langcodes/data/cldr*"]

[tool.poetry.dependencies]
python = ">= 3.6"
language-data = { version = "^1.1", optional = true }

[tool.poetry.dev-dependencies]
language-data = { version = "^1.1", optional = true }

[tool.poetry.extras]
data = ["language-data"]

[tool.flake8]
max-line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
